NetBSD Problem Report #39364

From jmcneill@eee.invisible.ca  Sat Aug 16 00:53:15 2008
Return-Path: <jmcneill@eee.invisible.ca>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 5247763B11D
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 16 Aug 2008 00:53:15 +0000 (UTC)
Message-Id: <20080816005310.D610034E2C@eee.invisible.ca>
Date: Fri, 15 Aug 2008 20:53:10 -0400 (EDT)
From: jmcneill@invisible.ca
Reply-To: jmcneill@invisible.ca
To: gnats-bugs@gnats.NetBSD.org
Subject: wpa_cli scan_results shows '0' signal level
X-Send-Pr-Version: 3.95

>Number:         39364
>Category:       kern
>Synopsis:       wpa_cli scan_results shows '0' signal level
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Aug 16 00:55:00 +0000 2008
>Closed-Date:    Fri Aug 29 12:58:56 +0000 2008
>Last-Modified:  Mon Feb 02 20:30:02 +0000 2009
>Originator:     Jared D. McNeill
>Release:        NetBSD 4.99.72
>Organization:

>Environment:


System: NetBSD eee.invisible.ca 4.99.72 NetBSD 4.99.72 (GENERIC) #60: Thu Aug 14 19:22:34 EDT 2008 jmcneill@black.invisible.ca:/export/home/jmcneill/scratch/obj/sys/arch/i386/compile/GENERIC i386
Architecture: i386
Machine: i386
>Description:
	Running 'wpa_cli scan_results' doesn't report signal level.
>How-To-Repeat:
$ wpa_cli scan_results
Selected interface 'ath0'
20:35:53.072: bssid / frequency / signal level / flags / ssid
00:xx:93:e8:xx:xx	2412	0	[WPA2-PSK-CCMP]	one
00:xx:7d:50:xx:xx	2412	0	[WPA-PSK-CCMP]	two
00:xx:e5:7a:xx:xx	2437	0	[WPA-PSK-TKIP+CCMP]	three
00:xx:29:69:xx:xx	2412	0	[WPA-PSK-TKIP+CCMP]	four
00:xx:a3:0e:xx:xx	2462	0	[WEP]	five
00:xx:3f:46:xx:xx	2462	0	[WEP]	six
00:xx:e2:4c:xx:xx	2437	0	[WEP]	seven
00:xx:e5:60:xx:xx	2437	0	[WEP]	eight
>Fix:


>Release-Note:

>Audit-Trail:
From: "Jared D. McNeill" <jmcneill@invisible.ca>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org, 
 netbsd-bugs@netbsd.org
Subject: Re: kern/39364: wpa_cli scan_results shows '0' signal level
Date: Thu, 28 Aug 2008 20:06:14 -0400

 The following patch fixes the problem for me. Can someone verify its 
 correctness?

 Index: driver_netbsd.c
 ===================================================================
 RCS file: /cvsroot/src/usr.sbin/wpa/wpa_supplicant/driver_netbsd.c,v
 retrieving revision 1.6
 diff -u -r1.6 driver_netbsd.c
 --- driver_netbsd.c	15 Jun 2008 18:33:32 -0000	1.6
 +++ driver_netbsd.c	29 Aug 2008 00:05:48 -0000
 @@ -695,8 +695,8 @@
   		wsr->ssid_len = sr->isr_ssid_len;
   		wsr->freq = sr->isr_freq;
   		wsr->noise = sr->isr_noise;
 -		wsr->qual = sr->isr_rssi;
 -		wsr->level = 0;		/* XXX? */
 +		wsr->qual = 0;			/* XXX? */
 +		wsr->level = sr->isr_rssi;
   		wsr->caps = sr->isr_capinfo;
   		wsr->maxrate = getmaxrate(sr->isr_rates, sr->isr_nrates);
   		vp = (u_int8_t *)(sr+1);

From: christos@zoulas.com (Christos Zoulas)
To: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org, 
	gnats-admin@netbsd.org, netbsd-bugs@netbsd.org, jmcneill@invisible.ca
Cc: 
Subject: Re: kern/39364: wpa_cli scan_results shows '0' signal level
Date: Fri, 29 Aug 2008 00:57:10 -0400

 On Aug 29, 12:10am, jmcneill@invisible.ca ("Jared D. McNeill") wrote:
 -- Subject: Re: kern/39364: wpa_cli scan_results shows '0' signal level

 | The following reply was made to PR kern/39364; it has been noted by GNATS.
 | 
 | From: "Jared D. McNeill" <jmcneill@invisible.ca>
 | To: gnats-bugs@NetBSD.org
 | Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org, 
 |  netbsd-bugs@netbsd.org
 | Subject: Re: kern/39364: wpa_cli scan_results shows '0' signal level
 | Date: Thu, 28 Aug 2008 20:06:14 -0400
 | 
 |  The following patch fixes the problem for me. Can someone verify its 
 |  correctness?
 |  
 |  Index: driver_netbsd.c
 |  ===================================================================
 |  RCS file: /cvsroot/src/usr.sbin/wpa/wpa_supplicant/driver_netbsd.c,v
 |  retrieving revision 1.6
 |  diff -u -r1.6 driver_netbsd.c
 |  --- driver_netbsd.c	15 Jun 2008 18:33:32 -0000	1.6
 |  +++ driver_netbsd.c	29 Aug 2008 00:05:48 -0000
 |  @@ -695,8 +695,8 @@
 |    		wsr->ssid_len = sr->isr_ssid_len;
 |    		wsr->freq = sr->isr_freq;
 |    		wsr->noise = sr->isr_noise;
 |  -		wsr->qual = sr->isr_rssi;
 |  -		wsr->level = 0;		/* XXX? */
 |  +		wsr->qual = 0;			/* XXX? */
 |  +		wsr->level = sr->isr_rssi;
 |    		wsr->caps = sr->isr_capinfo;
 |    		wsr->maxrate = getmaxrate(sr->isr_rates, sr->isr_nrates);
 |    		vp = (u_int8_t *)(sr+1);

 Sure, if it works...

 christos

State-Changed-From-To: open->closed
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Fri, 29 Aug 2008 12:58:56 +0000
State-Changed-Why:
Fixed.


From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39364 CVS commit: src/usr.sbin/wpa/wpa_supplicant
Date: Fri, 29 Aug 2008 12:58:20 +0000 (UTC)

 Module Name:	src
 Committed By:	jmcneill
 Date:		Fri Aug 29 12:58:19 UTC 2008

 Modified Files:
 	src/usr.sbin/wpa/wpa_supplicant: driver_netbsd.c

 Log Message:
 PR# 39364: wpa_cli scan_results shows '0' signal level

 Use rssi for level (instead of qual) in scan results, following examples
 set by the wpa_supplicant ndis and iphone drivers.


 To generate a diff of this commit:
 cvs rdiff -r1.7 -r1.8 src/usr.sbin/wpa/wpa_supplicant/driver_netbsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39364 CVS commit: src/dist/wpa/src/drivers
Date: Thu, 29 Jan 2009 00:17:22 +0000 (UTC)

 Module Name:	src
 Committed By:	jmcneill
 Date:		Thu Jan 29 00:17:22 UTC 2009

 Modified Files:
 	src/dist/wpa/src/drivers: driver_bsd.c

 Log Message:
 Merge http://cvsweb.netbsd.org/bsdweb.cgi/src/usr.sbin/wpa/wpa_supplicant/Attic/driver_netbsd.c.diff?r1=1.7&r2=1.8

 PR# 39364: wpa_cli scan_results shows '0' signal level

 Use rssi for level (instead of qual) in scan results, following examples
 set by the wpa_supplicant ndis and iphone drivers.


 To generate a diff of this commit:
 cvs rdiff -r1.4 -r1.5 src/dist/wpa/src/drivers/driver_bsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39364 CVS commit: [netbsd-5] src/dist/wpa/src/drivers
Date: Mon,  2 Feb 2009 20:29:37 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Mon Feb  2 20:29:37 UTC 2009

 Modified Files:
 	src/dist/wpa/src/drivers [netbsd-5]: driver_bsd.c

 Log Message:
 Pull up following revision(s) (requested by jmcneill in ticket #376):
 	dist/wpa/src/drivers/driver_bsd.c: revision 1.5
 Merge http://cvsweb.netbsd.org/bsdweb.cgi/src/usr.sbin/wpa/wpa_supplicant/Attic/driver_netbsd.c.diff?r1=1.7&r2=1.8
 PR# 39364: wpa_cli scan_results shows '0' signal level
 Use rssi for level (instead of qual) in scan results, following examples
 set by the wpa_supplicant ndis and iphone drivers.


 To generate a diff of this commit:
 cvs rdiff -r1.2.4.2 -r1.2.4.3 src/dist/wpa/src/drivers/driver_bsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.