PR# 39364: wpa_cli scan_results shows '0' signal level

Use rssi for level (instead of qual) in scan results, following examples
set by the wpa_supplicant ndis and iphone drivers.